--- a/css/Assignmentstyle.css
+++ b/css/Assignmentstyle.css
@@ -7,7 +7,7 @@
     margin:0px auto;
     padding: 50px 0px 50px 0px;
     border-bottom: 1px ridge;
-    min-height:400px;
+    min-height:300px;
 }
 
 .footer{
@@ -27,4 +27,13 @@ address{
     font-size:80%;
     margin:0px;
     color:#0f0f0f;
+}
+
+body{
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+}
+
+.navbar-dark{
+    background-color: black;
 }
