--- a/css/Assignmentstyle.css
+++ b/css/Assignmentstyle.css
@@ -37,3 +37,10 @@ body{
 .navbar-dark{
     background-color: black;
 }
+
+.tab-content{
+    border-right: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px; 
+}
