--- a/css/Sass_styles.scss
+++ b/css/Sass_styles.scss
@@ -8,6 +8,16 @@ $background_lite: #9575CD;
 $background_dark: #512DA8;
 $backgorund_pale:#D1C4E9;
 
+//-----------------------------------------Assignment 4-----------------------------//
+.modal-header{
+    background-color: $background_dark;
+    color: #ffffff;
+}
+
+.modal-body{
+    background-color: $background_lite;
+}
+//----------------------------------------------------------------------------------//
 $carousel-item-height:300px;
 
  @mixin zero-margin($pad-up-dn:0px,$pad-lef-rig:0px){          //structures in sass aka mixins
