npm scripts part 1

--- a/css/Sass_styles.scss
+++ b/css/Sass_styles.scss
@@ -11,11 +11,11 @@ $backgorund_pale:#D1C4E9;
 //-----------------------------------------Assignment 4-----------------------------//
 .modal-header{
     background-color: $background_dark;
-    color: #ffffff;
+    color: floralwhite;
 }
 
 .modal-body{
-    background-color: $background_lite;
+    background-color: $backgorund_pale;
 }
 //----------------------------------------------------------------------------------//
 $carousel-item-height:300px;
